# Chat-libevent

./: README.md
chatClient/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
chatClient/include/: ElaSuggestBox.h
chatClient/lib/: ElaWidgetToolsd.lib
chatClient/src/core/: clientrequesthandler.cpp  clientrequesthandler.h  commondata.cpp  commondata.h  loginverify.cpp  loginverify.h  pagedata.h
chatClient/src/core/database/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  dbcachehelper.cpp  dbcachehelper.h  friendshipdao.cpp  friendshipdao.h  groupdao.cpp  groupdao.h  userdao.cpp  userdao.h
chatClient/src/page-view/: aboutpage.cpp  aboutpage.h  addpage.cpp  addpage.h  archpage.cpp  archpage.h  contactdelegate.cpp  contactdelegate.h  contactmodel.cpp  contactmodel.h  contactpage.cpp  contactpage.h  conversationpage.cpp  conversationpage.h  creategrouppage.cpp  creategrouppage.h  define.h  editinfopage.cpp  editinfopage.h  emojipickerpage.cpp  emojipickerpage.h  groupmemberdock.cpp  groupmemberdock.h  landpage.cpp  landpage.h  messagepage.cpp  messagepage.h  noticepage.cpp  noticepage.h  registerpage.cpp  registerpage.h  screenshotpage.cpp  screenshotpage.h  userpage.cpp  userpage.h
chatClient/src/page-view/.claude/: settings.local.json
chatClient/src/page-view/effect-component/: loadingdialog.cpp  loadingdialog.h  ssmaskwidget.cpp  ssmaskwidget.h
chatClient/src/page-view/effect-component/msg-bubble/: msgbubbledelegate.cpp  msgbubbledelegate.h  msgbubblemodel.cpp  msgbubblemodel.h  msgbubbleview.cpp  msgbubbleview.h
chatClient/src/page-view/llm-page/: CMakeLists.txt  LLMChatPage.cpp  LLMChatPage.h  LLMChatPage.qrc
chatClient/src/utils/get-time/: GetCurTime.cpp  GetCurTime.h
chatClient/src/utils/log/: logfile.cpp  logfile.h
chatClient/src/utils/net-work/: clientconserver.cpp  clientconserver.h
chatServer/: CMakeLists.txt  README.md
chatServer/header/: chat_info.h  chat_server.h  chat_thread.h  data_base.h  event_utils.h  log.h  snowflake_id_generator.h
chatServer/src/: chat_info.cpp  chat_server.cpp  chat_thread.cpp  data_base.cpp  main.cpp  snowflake_id_generator.cpp
